--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello,This is Moaz.</h1>
-    <script src="app.js",src="style.css"></script>   
+    <script src="app.js"></script>   
 </body>
 </html>
