--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello,This is A New Branch.</h1>
+    <h1>This Is An Update.</h1>
     <script src="app.js"></script>   
 </body>
 </html>
